[workspace]
resolver = "2"

members = [
   "lc-0001-two-sum",
   "lc-0002-add-two-numbers",
   "lc-0006-zigzag-string",
   "lc-0011-container-with-most-water",
   "lc-0012-int-to-roman",
   "lc-0013-roman-to-int",
   "lc-0014-longest-common-prefix",
   "lc-0026-remove-duplicates-sorted",
   "lc-0027-remove-element",
   "lc-0028-first-occurrence-in-str",
   "lc-0036-valid-sudoku",
   "lc-0045-jump-game-ii",
   "lc-0055-jump-game",
   "lc-0058-length-of-last-word",
   "lc-0068-text-justification",
   "lc-0080-remove-duplicates-sorted-ii",
   "lc-0088-merge-sorted-array",
   "lc-0121-best-time-to-buy",
   "lc-0122-best-time-to-buy-ii",
   "lc-0134-gas-station",
   "lc-0135-candy", "lc-0136-single-number",
   "lc-0151-reverse-words",
   "lc-0167-two-sum-ii",
   "lc-0169-majority-element",
   "lc-0189-rotate-array",
   "lc-0191-number-of-set-bits",
   "lc-0205-isomorphic-strings",
   "lc-0238-product-except-self",
   "lc-0274-h-index",
   "lc-0380-insert-delete-getrandom-o1",
   "lc-0383-ransom-note",
   "lc-0432-all-one-data-structure",
   "lc-0567-permutation-in-string",
   "lc-0641-circular-dequeue",
   "lc-1371-longest-substr-even-vowels",
   "lc-1381-design-stack-with-increment",
   "lc-1497-array-pairs-divisible",
   "lc-1545-kth-bit-in-kth-binary-string",
   "lc-2109-adding-spaces",
   "lc-2491-teams-of-equal-skill",
]
